# sprite-1

./: .gitignore  CONTRIBUTING.md  ComponentDiagram.drawio  LICENSE  README.md  pyproject.toml
.github/workflows/: book.yml  publish-book.yml
book/: 1-mission-plan.md  _config.yml  _toc.yml
docs/: index.md
inav/: INAV_5.1.0_cli_20221122_224916.txt  INAV_6.0.0_cli_20221204_Maiden.txt  INAV_6.0.0_cli_HEART_OF GOLD_20221204_152812.txt  INAV_6.0.0_cli_HEART_OF GOLD_20221218_101434.txt  README.md  killer_whale_pids.txt
