[tool.poetry]
name = "sprite-1"
version = "1.0.0"
description = "Documentation and files for Operation Whale Drop"
authors = []
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]